--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,8 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-        monospace;
+.navbar {
+    margin-bottom: 30px;
 }
 
 .clickable {
